CompDTO 완료