@@ -3,10 +3,10 @@ package com.example.jobala.comp;
 import com.example.jobala._core.errors.exception.Exception404;
 import com.example.jobala._user.User;
 import com.example.jobala._user.UserJPARepository;
+import com.example.jobala._user.UserResponse;
 import com.example.jobala.apply.ApplyJPARepository;
 import com.example.jobala.jobopen.Jobopen;
 import com.example.jobala.jobopen.JobopenResponse;
-import com.example.jobala.resume.Resume;
 import com.example.jobala.resume.ResumeJPARepository;
 import com.example.jobala.resume.ResumeResponse;
 import lombok.RequiredArgsConstructor;
@@ -20,7 +20,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,48 +30,50 @@ public class CompService {
     private final CompJPARepository compJPARepository;
     private final ApplyJPARepository applyJPARepository;
 
-
-    public List<ResumeResponse.ListDTO> searchResumes(String skills, CompResponse.SearchDTO resDTO) {
+    //기업 - 인재채용 검색필터
+    public List<ResumeResponse.ScoutListDTO> searchResumes(String skills, CompResponse.SearchDTO resDTO) {
         return compQueryRepository.findAll(skills, resDTO);
     }
 
-    // 이력서 목록 가져오기
-    public List<ResumeResponse.ListDTO> listAllResumes() {
-        List<ResumeResponse.ListDTO> resumes = compQueryRepository.findResumeAll();
+    // 기업 - 인재채용 목록, 최신 1건 이력서만 가져오기
+    public List<ResumeResponse.ScoutListDTO> listAllResumes() {
+        List<ResumeResponse.ScoutListDTO> resumes = compQueryRepository.findResumeAll();
         if (resumes.isEmpty()) {
             throw new Exception404("이력서가 없습니다.");
         }
         return resumes;
     }
 
-    // 이력서 상세정보 가져오기
-    public List<Resume> getResumeDetail(Integer id) {
-        return compQueryRepository.findResumeById(id);
-    }
 
-    // 채용공고리스트 가져오기
-    public List<JobopenResponse.DTO> searchjobopenList(Integer userId) {
-        List<Jobopen> temp = compQueryRepository.findJobopenById(userId);
-        List<JobopenResponse.DTO> jobopenList = temp.stream().map(jobopen -> new JobopenResponse.DTO(jobopen)).collect(Collectors.toList());
+    // 기업 - 채용공고 목록
+    public List<JobopenResponse.MngDTO> searchjobopenList(Integer sessionUserId) {
+        //공고와 유저를 조인해서 가져온 공고 리스트
+        List<Jobopen> temp = compQueryRepository.findJobopenById(sessionUserId);
+        List<JobopenResponse.MngDTO> jobopenList = temp.stream()
+                .map(jobopen -> new JobopenResponse.MngDTO(sessionUserId, temp)).toList();
 
-        jobopenList.forEach(dto -> {
-            int count = applyJPARepository.countJobopenApplyById(dto.getId());
-            dto.setCount(count);
-        });
+        jobopenList.forEach(dto ->
+                dto.getJobopenDTO().forEach(jobopenDTO -> {
+                    int count = applyJPARepository.countJobopenApplyById(jobopenDTO.getId());
+                    jobopenDTO.setApplyCount(count);
+                })
+        );
 
         return jobopenList;
     }
 
-    // 기업회원프로필
-    @Transactional(readOnly = true)
-    public User getCompanyProfile(Integer userId) {
-        return userJPARepository.findById(userId)
+    // 기업 - 프로필관리
+    public UserResponse.GuestProfile getCompanyProfile(Integer userId) {
+        User user = userJPARepository.findById(userId)
                 .orElseThrow(() -> new Exception404("유저를 찾을 수 없습니다."));
+
+        return new UserResponse.GuestProfile(user);
     }
 
-    // 프로필업데이트
+
+    //기업 - 프로필업데이트
     @Transactional
-    public User compUpdateProfile(CompRequest.CompProfileUpdateDTO reqDTO, User sessionUser) {
+    public UserResponse.GuestProfile compUpdateProfile(CompRequest.CompProfileUpdateDTO reqDTO, User sessionUser) {
         User user = compJPARepository.findById(sessionUser.getId())
                 .orElseThrow(() -> new Exception404("수정할 프로필이 없습니다."));
 
@@ -91,7 +92,7 @@ public class CompService {
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        return user;
+        return new UserResponse.GuestProfile(user);
     }
 
 }
